[gd_scene load_steps=5 format=3 uid="uid://bfg7gsxlcq27n"]

[ext_resource type="Script" uid="uid://cjdr1yphfoo4b" path="res://scripts/checkpoint.gd" id="2_vsimk"]
[ext_resource type="PackedScene" uid="uid://dthkrlr4x3ypa" path="res://scenes/waypoint_marker.tscn" id="2_ywqth"]
[ext_resource type="AudioStream" uid="uid://b6qwgeqctstto" path="res://assets/audio/Winning SFX.mp3" id="3_vsimk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_yyywg"]
radius = 135.76543

[node name="Checkpoint" type="Node2D"]
script = ExtResource("2_vsimk")
highlight_color = Color(0.9764706, 0.8509804, 0.1254902, 0.050980393)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
modulate = Color(0.96277636, 0.9610222, 1.540184e-06, 1)
shape = SubResource("CircleShape2D_yyywg")
debug_color = Color(1, 1, 1, 0.41960785)

[node name="Pointer" parent="." instance=ExtResource("2_ywqth")]
on_screen_offset = Vector2(0.5, -170)
screen_margin = 80.0

[node name="WinningSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_vsimk")
volume_db = -4.0
bus = &"SFX"

[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_body_entered"]
